flex wrapped books fixed html

--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
   font-family: "Roboto", sans-serif;
 }
 
-body{
-    max-width: 100vw;
-    overflow-x: hidden;
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 /* NAVIGATION  */
 
@@ -21,8 +21,8 @@ ul {
   display: flex;
 }
 
-p{
-    line-height: 1.5;
+p {
+  line-height: 1.5;
 }
 
 li {
@@ -92,16 +92,14 @@ header {
   padding-top: 27px;
 }
 
-.header__description {
+.header__description{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.header__img--wrapper{
-    padding: 28px;
-    
-
+.header__img--wrapper {
+  padding: 28px;
 }
 
 h1 {
@@ -133,88 +131,86 @@ button:active {
   border: none;
 }
 
-.container{
-padding: 56px 0;
-
+.container {
+  padding: 56px 0;
+  
 }
 
-.row{
-width: 100%;
-max-width: 1200px;
-margin: 0 auto;
+.row {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
-
+.row__column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 /* HIGHILIGHTS */
 
+#highlights {
+  position: relative;
+}
 
-#highlights{
-    position: relative;
+#highlights:before,
+#highlights:after {
+  background: url("assets/wave.svg");
+  content: "";
+  position: absolute;
+  width: 101vw;
+  height: 12vw;
+  left: 0;
+  z-index: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #highlights:before {
-  background: url('assets/wave.svg');
-  content: "";
-  position: absolute;
-  width: 101vw;
-  height: 12vw;
   top: 1px;
-  left: 0;
-  z-index: 1;
-  background-size: cover;
-  background-repeat: no-repeat;
   transform: translateY(-100%);
 }
 #highlights:after {
-  background: url('assets/wave.svg');
-  content: "";
-  position: absolute;
-  width: 101vw;
-  height: 12vw;
   bottom: 1px;
-  left: 0;
-  z-index: 1;
-  background-size: cover;
-  background-repeat: no-repeat;
   transform: translateY(100%) rotate(180deg);
 }
-.highlight__wrapper{
-    display: flex;
-    margin: 0 auto;
-   }
+.highlight__wrapper {
+  display: flex;
+  margin: 0 auto;
+}
 
 .highlight {
-    padding: 0 24px;
-    width: calc(100% / 3);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  padding: 0 24px;
+  width: calc(100% / 3);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.highlight__para{
-    text-align: center;
-    max-width: 280px;
+.highlight__para {
+  text-align: center;
+  max-width: 280px;
 }
 
-.highlight__img{
-    border: 2px solid purple;
-    color:  purple;
-    width: 100px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 4px;
-    font-size: 32px;
-    margin-bottom: 24px;
+.highlight__img {
+  border: 2px solid purple;
+  color: purple;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  font-size: 32px;
+  margin-bottom: 24px;
 }
 
-.highlight__subtitle{
-    font-size: 24px;
-    margin-bottom: 16px;
+.highlight__subtitle {
+  font-size: 24px;
+  margin-bottom: 16px;
+  align-items: center;
 }
-
 
 /*
 
@@ -222,7 +218,61 @@ FEATURES
 
 
 */
-#Features{
-    height: 1000px;
-background-color:  rgba(115, 66, 214, 0.1);
+#Features {
+  padding-top: 8vw;
+  background-color: rgba(115, 66, 214, 0.1);
+}
+
+.books {
+  display: flex;
+  flex-wrap: wrap;
+}
+.book {
+  width: 25%;
+  padding: 24px;
+}
+.book__img {
+  max-height: 380px;
+  transition: scale all 300ms ease;
+  cursor: not-allowed;
+}
+.book__img--wrapper {
+  margin-bottom: 8px;
+  border-radius: 4px;
+  overflow: hidden;
+  display: flex;
+}
+
+.book:hover .book__img {
+  transform: scale(1.03);
+}
+
+.book__title {
+  font-size: 20px;
+  margin-bottom: 8px;
+}
+.book__title:hover {
+  text-decoration: underline;
+}
+
+.book__ratings {
+  color: gold;
+  margin-bottom: 8px;
+}
+.book__price--normal {
+  text-decoration: line-through;
+  padding-right: 6px;
+  color: gray;
+}
+
+/*
+
+
+EXPLORE
+
+
+*/
+
+#explore {
+  background-color: rgba(115, 66, 214, 0.1);
 }
